# gateway_sample

./: Cargo.toml  Dockerfile  README.md  build.rs  config.toml  docker-compose.yml
examples/: test_grpc_stream.rs  test_grpc_subscription.rs  test_jsonrpc_basic.rs  test_jsonrpc_subscription.rs  test_jsonrpc_ws.rs
protos/: README.md  helloworld.proto  user.proto
src/: config.rs  errors.rs  lib.rs  main.rs  server.rs
src/handlers/: grid.rs  grpc_helloworld.rs  grpc_user.rs  mod.rs  user_info.rs
src/routes/: grid.rs  health.rs  json_rpc.rs  mod.rs  rest.rs
